# Pidgin_Translator_Plugin

./: .gitmodules  Doxyfile  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  updateSub.sh
doc/: Doxyfile  Makefile.am  mainpage.md
include/: notifications.h  python_interface.h
python/: Makefile.am  apertiumFiles.py  apertiumInterfaceAPY.py  setup.py
python/apertiumpluginutils/: apertiumFiles.py  apertiumInterfaceAPY.py
src/: Makefile.am  notifications.c  python_interface.c  translator.c
src/py2/: python_interface.c  translator.c
src/py3/: python_interface.c  translator.c
